# anygrasp_ros2

./: .gitignore  environment.yml
anygrasp_sdk/grasp_detection/: calculate_s1_ap.py  demo.py  demo_anygrasp.py  disable_eval_shim.py  grasp_gen.py  test_graspnet.py  test_graspnet.sh
anygrasp_sdk/grasp_detection/_tmp_conv_search/FxFyFz__I__C/000002/: 000000.npy  000001.npy  000002.npy  000003.npy  000004.npy  000005.npy  000006.npy  000007.npy  000008.npy  000009.npy  000010.npy  000011.npy  000012.npy
anygrasp_sdk/grasp_detection/_tmp_conv_search/FxFyFz__I__L/000002/: 000000.npy  000001.npy  000002.npy  000003.npy  000004.npy  000005.npy  000006.npy  000007.npy  000008.npy  000009.npy  000010.npy  000011.npy  000012.npy
anygrasp_sdk/grasp_detection/_tmp_conv_search/FxFyFz__Rx180__C/000002/: 000000.npy  000001.npy  000002.npy  000003.npy  000004.npy  000005.npy  000006.npy  000007.npy  000008.npy  000009.npy  000010.npy  000011.npy  000012.npy
anygrasp_sdk/grasp_detection/_tmp_conv_search/FxFyFz__Rx180__L/000002/: 000000.npy  000001.npy  000002.npy  000003.npy  000004.npy  000005.npy  000006.npy  000007.npy  000008.npy  000009.npy  000010.npy  000011.npy  000012.npy
anygrasp_sdk/grasp_detection/_tmp_conv_search/FxFyFz__Ry180__C/000002/: 000000.npy  000001.npy  000002.npy  000003.npy  000004.npy  000005.npy  000006.npy  000007.npy  000008.npy  000009.npy  000010.npy  000011.npy  000012.npy
anygrasp_sdk/grasp_detection/_tmp_conv_search/FxFyFz__Ry180__L/000002/: 000000.npy  000001.npy  000002.npy  000003.npy  000004.npy  000005.npy  000006.npy  000007.npy  000008.npy  000009.npy  000010.npy  000011.npy  000012.npy
anygrasp_sdk/grasp_detection/_tmp_conv_search/FxFyFz__Rz180__C/000002/: 000000.npy  000001.npy  000002.npy  000003.npy  000004.npy  000005.npy  000006.npy  000007.npy  000008.npy  000009.npy  000010.npy  000011.npy  000012.npy
anygrasp_sdk/grasp_detection/_tmp_conv_search/FxFyFz__Rz180__L/000002/: 000000.npy  000001.npy  000002.npy  000003.npy  000004.npy  000005.npy  000006.npy  000007.npy  000008.npy  000009.npy  000010.npy  000011.npy  000012.npy
anygrasp_sdk/grasp_detection/_tmp_conv_search/FxFy__I__C/000002/: 000002.npy  000003.npy  (+5 more)
anygrasp_sdk/grasp_detection/data/: graspnet
anygrasp_sdk/grasp_detection/dumps_result/: ap_overall.csv  success_at_1_overall.csv  summary.json
anygrasp_sdk/grasp_detection/example_data/: best_grasp.json
anygrasp_sdk/grasp_detection/logs/graspnet_test_anygrasp_260126_061136_realsense_novel_anygrasp/: commandline_args.json
anygrasp_sdk/grasp_detection/shims/dexnet/: __init__.py
anygrasp_sdk/grasp_detection/shims/meshpy/: __init__.py  obj_file.py
ros2_anygrasp/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_anygrasp/ros2_anygrasp/: json_to_topic.py  test.py
ros2_anygrasp/srv/: GetAnyGraspPoses.srv
(+520 files in other folders)
